--- a/views/blog.html
+++ b/views/blog.html
@@ -15,22 +15,22 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Site CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <!-- ALL VERSION CSS -->
-    <link rel="stylesheet" href="css/versions.css">
+    <link rel="stylesheet" href="/css/versions.css">
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="/css/custom.css">
 
     <!-- Modernizer for Portfolio -->
-    <script src="js/modernizer.js"></script>
+    <script src="/js/modernizer.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -143,7 +143,7 @@
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-						<li class="nav-item active dropdown">
+						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Course </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
 								<a class="dropdown-item" href="course-grid-2.html">Course Grid 2 </a>
@@ -151,7 +151,7 @@
 								<a class="dropdown-item" href="course-grid-4.html">Course Grid 4 </a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
+						<li class="nav-item active dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Blog </a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
 								<a class="dropdown-item" href="blog.html">Blog </a>
@@ -173,7 +173,7 @@
 	
 	<div class="all-title-box">
 		<div class="container text-center">
-			<h1>Course Grid 2<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
+			<h1>Blog<span class="m_1">Lorem Ipsum dolroin gravida nibh vel velit.</span></h1>
 		</div>
 	</div>
 	
@@ -188,195 +188,138 @@
             <hr class="invis"> 
 
             <div class="row"> 
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="blog-item">
 						<div class="image-blog">
 							<img src="images/blog_1.jpg" alt="" class="img-fluid">
 						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Engineering</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
 						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+						</div>
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+						</div>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More<span></a>
 						</div>
 					</div>
                 </div><!-- end col -->
 
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="blog-item">
 						<div class="image-blog">
 							<img src="images/blog_2.jpg" alt="" class="img-fluid">
 						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Hotel Management</a></h2>
-							</div>
-							<div class="blog-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
 						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
 						</div>
-					</div>
-                </div><!-- end col -->	
-            </div><!-- end row -->
-			
-			<hr class="hr3"> 
-			
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="images/blog_3.jpg" alt="" class="img-fluid">
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
 						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Biotechnology</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
-				<div class="col-lg-6 col-md-6 col-12">
-                   <div class="course-item">
-						<div class="image-blog">
-							<img src="images/blog_4.jpg" alt="" class="img-fluid">
-						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Medical Sciences</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
-						</div>
-					</div>
-                </div><!-- end col -->
-			</div><!-- end row -->
-			
-			<hr class="hr3"> 
-			
-            <div class="row"> 
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
-						<div class="image-blog">
-							<img src="images/blog_5.jpg" alt="" class="img-fluid">
-						</div>		
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Finance</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
-						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
 						</div>
 					</div>
                 </div><!-- end col -->
 
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="course-item">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="blog-item">
+						<div class="image-blog">
+							<img src="images/blog_3.jpg" alt="" class="img-fluid">
+						</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
+						</div>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+						</div>
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+						</div>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
+						</div>
+					</div>
+                </div><!-- end col -->
+            </div><!-- end row -->
+
+            <hr class="hr3"> 
+
+            <div class="row"> 
+                <div class="col-lg-4 col-md-6 col-12">
+                   <div class="blog-item">
+						<div class="image-blog">
+							<img src="images/blog_4.jpg" alt="" class="img-fluid">
+						</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
+						</div>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+						</div>
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+						</div>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
+						</div>
+					</div>
+                </div><!-- end col -->
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="blog-item">
+						<div class="image-blog">
+							<img src="images/blog_5.jpg" alt="" class="img-fluid">
+						</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
+						</div>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+						</div>
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+						</div>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
+						</div>
+					</div>
+                </div><!-- end col -->
+
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="blog-item">
 						<div class="image-blog">
 							<img src="images/blog_6.jpg" alt="" class="img-fluid">
 						</div>
-						<div class="course-br">
-							<div class="course-title">
-								<h2><a href="#" title="">Fashion Designing</a></h2>
-							</div>
-							<div class="course-desc">
-								<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
-							</div>	
-							<div class="course-rating">
-								4.5
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star"></i>	
-								<i class="fa fa-star-half"></i>								
-							</div>
+						<div class="meta-info-blog">
+							<span><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a> </span>
+                            <span><i class="fa fa-tag"></i>  <a href="#">News</a> </span>
+                            <span><i class="fa fa-comments"></i> <a href="#">12 Comments</a></span>
 						</div>
-						<div class="course-meta-bot">
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> 6 Month</li>
-								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> 7 Books</li>
-							</ul>
+						<div class="blog-title">
+							<h2><a href="#" title="">perferendis doloribus asperiores.</a></h2>
+						</div>
+						<div class="blog-desc">
+							<p>Lorem ipsum door sit amet, fugiat deicata avise id cum, no quo maiorum intel ogrets geuiat operts elicata libere avisse id cumlegebat, liber regione eu sit.... </p>
+						</div>
+						<div class="blog-button">
+							<a class="hover-btn-new orange" href="#"><span>Read More</span></a>
 						</div>
 					</div>
                 </div><!-- end col -->
