--- a/views/partials/_loginModal.ejs
+++ b/views/partials/_loginModal.ejs
@@ -21,10 +21,13 @@
       <div class="modal-body customer-box">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs">
-          <li><a class="active" href="#Login" data-toggle="tab">Login</a></li>
-          <li><a href="#Registration" data-toggle="tab">Registration</a></li>
+
+          <li><a class="active" href="#" data-toggle="tab">Login</a></li>
+          <li><a href="#" data-toggle="tab">Registration</a></li>
+      
         </ul>
         <!-- Tab panes -->
+      
         <div class="tab-content">
           <div class="tab-pane active" id="Login">
             <form
@@ -132,6 +135,7 @@
             </form>
           </div>
         </div>
+      
       </div>
     </div>
   </div>
