--- a/views/partials/_loginModal.ejs
+++ b/views/partials/_loginModal.ejs
@@ -21,15 +21,16 @@
       <div class="modal-body customer-box">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs">
-
-          <li><a class="active" href="#" data-toggle="tab">Login</a></li>
-          <li><a href="#" data-toggle="tab">Registration</a></li>
-      
+          <li><a class="" href="#Login" data-toggle="tab">Login</a></li>
+          <li>
+            <a href="#Registration" data-toggle="tab" class="active show"
+              >Registration</a
+            >
+          </li>
         </ul>
         <!-- Tab panes -->
-      
         <div class="tab-content">
-          <div class="tab-pane active" id="Login">
+          <div class="tab-pane" id="Login">
             <form
               role="form"
               method="POST"
@@ -40,9 +41,9 @@
                 <div class="col-sm-12">
                   <input
                     class="form-control"
+                    id="email1"
                     name="email"
-                    id="email"
-                    placeholder="Email"
+                    placeholder="email"
                     type="email"
                   />
                 </div>
@@ -50,10 +51,10 @@
               <div class="form-group">
                 <div class="col-sm-12">
                   <input
-                    name="password"
                     class="form-control"
-                    id="password"
-                    placeholder="****"
+                    name="password"
+                    id="exampleInputPassword1"
+                    placeholder="password"
                     type="password"
                   />
                 </div>
@@ -73,18 +74,18 @@
               </div>
             </form>
           </div>
-          <div class="tab-pane" id="Registration">
+          <div class="tab-pane active show" id="Registration">
             <form
               role="form"
               method="POST"
-              action="users/signup"
+              action="users/register"
               class="form-horizontal"
             >
               <div class="form-group">
                 <div class="col-sm-12">
                   <input
-                    name="name"
                     class="form-control"
+                    name="name"
                     placeholder="Name"
                     type="text"
                   />
@@ -93,9 +94,9 @@
               <div class="form-group">
                 <div class="col-sm-12">
                   <input
-                    name="email"
                     class="form-control"
                     id="email"
+                    name="email"
                     placeholder="Email"
                     type="email"
                   />
@@ -105,9 +106,9 @@
               <div class="form-group">
                 <div class="col-sm-12">
                   <input
-                    name="password"
                     class="form-control"
                     id="password"
+                    name="password"
                     placeholder="Password"
                     type="password"
                   />
@@ -116,17 +117,14 @@
               <div class="row">
                 <div class="col-sm-10">
                   <button
-                    type="submit"
+                    type="button"
                     class="btn btn-light btn-radius btn-brd grd1"
                   >
                     Save &amp; Continue
                   </button>
                   <button
                     type="button"
-                    id="cancel"
                     class="btn btn-light btn-radius btn-brd grd1"
-                    data-dismiss="modal"
-                    aria-hidden="true"
                   >
                     Cancel
                   </button>
@@ -135,7 +133,6 @@
             </form>
           </div>
         </div>
-      
       </div>
     </div>
   </div>
