--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -44,7 +44,7 @@
 								<h2><a href="/courses/<%= courses[i].slug%>" title=""><%= courses[i].title %></a></h2>
 							</div>
 							<div class="course-desc">
-								<p><%= courses[i].description %></p>
+								<p><%= courses[i].description.substring(0,100) %></p>
 							</div>
 						
 							<div class="course-rating">
@@ -54,13 +54,13 @@
 								<i class="fa fa-star"></i>	
 								<i class="fa fa-star"></i>	
 								<i class="fa fa-star-half"></i>								
-							</div><small>	<i class="fa fa-user" aria-hidden="true"></i> Gokhan Kandemir</small>
+							</div><small>	<i class="fa fa-user" aria-hidden="true"></i> <%= courses[i].user.name %></small>
 						</div>
 						<div class="course-meta-bot">
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> <%= courses[i].created_at %></li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> <%= courses[i].createdAt %></li>
 								<li><i class="fa fa-users" aria-hidden="true"></i> 56 Student</li>
-								<li><i class="fa fa-book" aria-hidden="true"></i> <%= courses[i].category %></li>
+								<li><i class="fa fa-book" aria-hidden="true"></i> <%= courses[i].category.title %></li>
 							</ul>
 						</div>
 					</div>
@@ -73,10 +73,10 @@
 				<div class="col-lg-3 col-12 right-single">
 					<div class="widget-search">
 						<div class="site-search-area">
-							<form method="get" id="site-searchform" action="#">
+							<form method="GET" id="site-searchform" action="/courses">
 								<div>
-									<input class="input-text form-control" name="search-k" id="search-k" placeholder="Search keywords..." type="text">
-									<input id="searchsubmit" value="Search" type="submit">
+									<input class="input-text form-control" name="search" id="search-k" placeholder="Search" type="text">
+									<button id="searchsubmit" value="Search" type="submit"></button>
 								</div>
 							</form>
 						</div>
