--- a/views/partials/_loginModal.ejs
+++ b/views/partials/_loginModal.ejs
@@ -34,7 +34,7 @@
             <form
               role="form"
               method="POST"
-              action="users/login"
+              action="/users/login"
               class="form-horizontal"
             >
               <div class="form-group">
